# CLion_Qt_Halcon_Demo

./: .gitignore  CMakeLists.txt  main.cpp  matching.cpp  matching.h  matching.ui  qhalconwindow.cpp  qhalconwindow.h  qhalconwindow.ui
